[package]
name = "rust-todo-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
chrono = "0.4.23"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
